# shackle

./: Cargo.toml  package-lock.json
.github/workflows/: build-test.yml
compilation/thir/: captures.html
crates/shackle/: Cargo.toml
crates/shackle-cli/: Cargo.toml
crates/shackle-cli/src/: main.rs
crates/shackle-compiler/: Cargo.toml
crates/shackle-compiler/src/: db.rs  file.rs  lib.rs
crates/shackle-diagnostics/: Cargo.toml
crates/shackle-diagnostics/src/: error.rs  lib.rs  warning.rs
crates/shackle-fmt/: Cargo.toml
crates/shackle-fmt/src/: container.rs  expression.rs  fancy.rs  format.rs  ir.rs  item.rs  lib.rs  options.rs  pattern.rs  types.rs
crates/shackle-fmt/tests/: shackle_library.rs  standard_library.rs
crates/shackle-fmt/tests/common/: mod.rs
crates/shackle-ls/: Cargo.toml
crates/shackle-ls/src/: db.rs  diagnostics.rs  extensions.rs  main.rs  utils.rs  vfs.rs
crates/shackle-syntax/: Cargo.toml
crates/shackle-syntax/src/: ast.rs  cst.rs  lib.rs
crates/shackle-syntax/src/eprime/: domain.rs  expression.rs  item.rs  primitive.rs
crates/shackle-syntax/src/minizinc/: container.rs  expression.rs  item.rs  mod.rs  pattern.rs  primitive.rs  types.rs
crates/shackle/src/: lib.rs
crates/xcsp3-serde/: Cargo.toml
docs/src/: SUMMARY.md  roadmap.md
docs/src/microzinc/: semantics.md
editors/code/: package.json  tsconfig.tsbuildinfo
editors/code/src/: main.ts  (+1 more)
parsers/tree-sitter-datazinc/: package.json
parsers/tree-sitter-eprime/: package.json
parsers/tree-sitter-minizinc/: grammar.js  package.json
share/minizinc/: compat.mzn
(+79 files in other folders)
