[package]
edition = "2021"
name = "shackle-fmt"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.18"
rustc-hash = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
shackle-diagnostics = { path = "../shackle-diagnostics" }
shackle-syntax = { path = "../shackle-syntax" }
stacker = "0.1.15"
tree-sitter = "0.24.2"
streaming-iterator = "0.1.9"
tree-sitter-minizinc = { path = "../../parsers/tree-sitter-minizinc" }

console = { version = "0.15.10", optional = true }
glob = { version = "0.3.2", optional = true }
miette = { version = "7.0.0", optional = true }
similar = { version = "2.7.0", optional = true }

[dev-dependencies]
expect-test = "1.4.1"
glob = "0.3.1"
pretty_assertions = "1.4.0"
shackle-compiler = { path = "../shackle-compiler" }

[features]
fancy = ["console", "glob", "miette", "similar"]
