[package]
name = "shackle-syntax"
version = "0.1.0"
license = "MPL-2.0"

edition = "2021"

[dependencies]
miette = "7.0.0"
shackle-diagnostics = { path = "../shackle-diagnostics" }
tree-sitter = "0.24.2"

[dev-dependencies]
expect-test = "1.4.1"
tree-sitter-eprime = { path = "../../parsers/tree-sitter-eprime" }
tree-sitter-minizinc = { path = "../../parsers/tree-sitter-minizinc" }
